Integrated homepage content design

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
     </p>
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col d-none d-lg-block">
           <img src="images/FilmFirst.png" class="img-fluid" alt="" />
         </div>
-        <div class="col-6">
+        <div class="col">
           <div class="content">
             <h2>FilmFirst App</h2>
             <p class="mb-4">
@@ -82,8 +82,9 @@
           </div>
         </div>
       </div>
+      <br /><br />
       <div class="row">
-        <div class="col-6">
+        <div class="col">
           <div class="content">
             <h2>Weather App</h2>
             <p class="mb-4">
@@ -95,8 +96,8 @@
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
-        <div class="col-6">
-          <img src="images/WeatherApp.png" class="img-fluid" alt="" />
+        <div class="col d-none d-lg-block">
+          <img src="images/WeatherApp.png" class="img-fluid mt-5" alt="" />
         </div>
       </div>
     </div>
