Created about page and content

--- a/about.html
+++ b/about.html
@@ -54,5 +54,26 @@
         </div>
       </div>
     </nav>
+    <div class="about-section container">
+      <div class="row">
+        <div class="col-6">
+          <div class="about-me">
+            <h1 class="mb-4">
+              Hi I am <br />
+              Emily Frame
+            </h1>
+            <h2 class="mb-4">Front-end Developer, based in England</h2>
+            <p class="mb-4">
+              With experience in HTML, CSS and Javascript I am passionate about
+              developing websites and software of a particular style.
+            </p>
+            <a href="" class="btn btn-branding">See my projects</a>
+          </div>
+        </div>
+        <div class="col-6 d-none d-lg-block">
+          <img src="images/Emily.png" alt="" class="img-fluid" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
