fixed responsive error on about page

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
     </nav>
     <div class="about-section container">
       <div class="row">
-        <div class="col-6">
+        <div class="col">
           <div class="about-me">
             <h1 class="mb-4">
               Hi I am <br />
@@ -70,7 +70,7 @@
             <a href="" class="btn btn-branding">See my projects</a>
           </div>
         </div>
-        <div class="col-6 d-none d-lg-block">
+        <div class="col d-none d-lg-block">
           <img src="images/Emily.png" alt="" class="img-fluid" />
         </div>
       </div>
