Created contact page and added links

--- a/contact.html
+++ b/contact.html
@@ -54,5 +54,28 @@
         </div>
       </div>
     </nav>
+    <div class="content-container container">
+      <div class="contents">
+        <h1 class="mb-5">Contact Me</h1>
+        <div class="social-media">
+          <h3>Email</h3>
+          <p class="mb-5">
+            <a href="mailto:framey27@gmail.com"> framey27@gmail.com</a>
+          </p>
+          <h3>Linked In</h3>
+          <p class="mb-5">
+            <a href="http://www.linkedin.com/in/emilyframe86" target="_blank">
+              Emily Frame</a
+            >
+          </p>
+          <h3>Instagram</h3>
+          <p>
+            <a href="http://www.instagram.com/framey22/" target="_blank">
+              @framey22</a
+            >
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
