--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html"
-              >Home</a
-            >
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
             <a class="nav-link" href="about.html">About</a>
             <a class="nav-link" href="portfolio.html">Portfolio</a>
             <a class="nav-link" href="contact.html">Contact</a>
@@ -100,6 +98,33 @@
           <img src="images/WeatherApp.png" class="img-fluid mt-5" alt="" />
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3"> Contact me </a>
+          </div>
+        </div>
+        <a href="mailto:framey27@gmail.com" class="email-link">
+          framey27@gmail.com</a
+        >
+        <div class="social-links d-flex justify-content-center">
+          <a href="http://www.instagram.com/framey22/" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="http://www.linkedin.com/in/emilyframe86" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/framey27" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
