Created portfolio page

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Emily Frame</a>
         <button
@@ -65,13 +65,44 @@
               With experience in HTML, CSS and Javascript I am passionate about
               developing websites and software of a particular style.
             </p>
-            <a href="" class="btn btn-branding">See my projects</a>
+            <a href="portfolio.html" class="btn btn-branding"
+              >See my projects</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
           <img src="images/Emily.png" alt="" class="img-fluid" />
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="contact.html" class="btn btn-branding mt-3">
+              Contact me
+            </a>
+          </div>
+        </div>
+        <a href="mailto:framey27@gmail.com" class="email-link">
+          framey27@gmail.com</a
+        >
+        <div class="social-links d-flex justify-content-center">
+          <a href="http://www.instagram.com/framey22/" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="http://www.linkedin.com/in/emilyframe86" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/framey27" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
