--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Emily Frame</a>
         <button
@@ -44,9 +44,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html"
-              >Home</a
-            >
+            <a class="nav-link" href="index.html">Home</a>
             <a class="nav-link" href="about.html">About</a>
             <a class="nav-link" href="portfolio.html">Portfolio</a>
             <a class="nav-link" href="contact.html">Contact</a>
@@ -54,5 +52,68 @@
         </div>
       </div>
     </nav>
+    <div class="content-container container">
+      <div class="row">
+        <div class="col">
+          <div class="portfolio-page">
+            <h1 class="mb-4">Take a look at what I have been working on!</h1>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="images/FilmFirst.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col-md-6">
+          <div class="weatherImg">
+            <img src="images/weatherApp.png" class="img-fluid" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="tagOne">
+            <h3>FilmFirst Project</h3>
+            <p class="text-muted">Built with HTML and CSS</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="tag">
+            <h3>Weather App Project</h3>
+            <p class="text-muted">Built with HTML, CSS and JavaScript</p>
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="contact.html" class="btn btn-branding mt-3">
+              Contact me
+            </a>
+          </div>
+        </div>
+        <a href="mailto:framey27@gmail.com" class="email-link">
+          framey27@gmail.com</a
+        >
+        <div class="social-links d-flex justify-content-center">
+          <a href="http://www.instagram.com/framey22/" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="http://www.linkedin.com/in/emilyframe86" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/framey27" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
