--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Emily Frame</a>
         <button
@@ -107,7 +107,9 @@
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3"> Contact me </a>
+            <a href="contact.html" class="btn btn-branding mt-3">
+              Contact me
+            </a>
           </div>
         </div>
         <a href="mailto:framey27@gmail.com" class="email-link">
