Made project SEO friendly and fixed the navigation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600&family=Playfair+Display&family=Righteous&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Emily Frame homepage</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
 
@@ -126,6 +126,12 @@
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
+        <p class="text-center text-muted mt-4">
+          This project was coded by Emily Frame and it is
+          <a href="https://github.com/framey27/Coding-Portfolio" target="_blank"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
