--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600&family=Playfair+Display&family=Righteous&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Contact Page</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
@@ -57,25 +57,54 @@
     <div class="content-container container">
       <div class="contents">
         <h1 class="mb-5">Contact Me</h1>
-        <div class="social-media">
-          <h3>Email</h3>
-          <p class="mb-5">
-            <a href="mailto:framey27@gmail.com"> framey27@gmail.com</a>
-          </p>
-          <h3>Linked In</h3>
-          <p class="mb-5">
-            <a href="http://www.linkedin.com/in/emilyframe86" target="_blank">
-              Emily Frame</a
-            >
-          </p>
-          <h3>Instagram</h3>
-          <p>
-            <a href="http://www.instagram.com/framey22/" target="_blank">
-              @framey22</a
-            >
-          </p>
+        <div class="row">
+          <div class="col-4">
+            <h3>Email</h3>
+            <p class="mb-5">
+              <a href="mailto:framey27@gmail.com"> framey27@gmail.com</a>
+            </p>
+          </div>
+
+          <div class="col-4">
+            <h3>Linked In</h3>
+            <p class="mb-5">
+              <a href="http://www.linkedin.com/in/emilyframe86" target="_blank">
+                Emily Frame</a
+              >
+            </p>
+          </div>
+          <div class="col-4">
+            <h3>Instagram</h3>
+            <p>
+              <a href="http://www.instagram.com/framey22/" target="_blank">
+                @framey22</a
+              >
+            </p>
+          </div>
         </div>
       </div>
+      <footer>
+        <a href="mailto:framey27@gmail.com" class="email-link">
+          framey27@gmail.com</a
+        >
+        <div class="social-links d-flex justify-content-center">
+          <a href="http://www.instagram.com/framey22/" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="http://www.linkedin.com/in/emilyframe86" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/framey27" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </div>
+        <p class="text-center text-muted mt-4">
+          This project was coded by Emily Frame and it is
+          <a href="https://github.com/framey27/Coding-Portfolio" target="_blank"
+            >open-sourced</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
