--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600&family=Playfair+Display&family=Righteous&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Emily Frame Portfolio</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
@@ -62,11 +62,19 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <img src="images/FilmFirst.png" class="img-fluid" alt="" />
+          <img
+            src="images/FilmFirst.png"
+            class="img-fluid"
+            alt="Film First project preview"
+          />
         </div>
         <div class="col-md-6">
           <div class="weatherImg">
-            <img src="images/weatherApp.png" class="img-fluid" alt="" />
+            <img
+              src="images/weatherApp.png"
+              class="img-fluid"
+              alt="Weather app project preview"
+            />
           </div>
         </div>
       </div>
@@ -113,6 +121,12 @@
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
+        <p class="text-center text-muted mt-4">
+          This project was coded by Emily Frame and it is
+          <a href="https://github.com/framey27/Coding-Portfolio" target="_blank"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
