Updated content and SEO's

--- a/about.html
+++ b/about.html
@@ -60,7 +60,9 @@
               Hi, I am <br />
               Emily Frame
             </h1>
-            <h2 class="mb-4">Front-end Developer, based in England</h2>
+            <h2 class="mb-4">
+              Front-end Developer, based in West Sussex, England
+            </h2>
             <p class="mb-4">
               With experience in HTML, CSS and Javascript I am passionate about
               developing websites and software of a particular style.
