--- a/index.html
+++ b/index.html
@@ -56,12 +56,10 @@
     </nav>
     <div class="intro">
       <h1>Emily Frame</h1>
-      <h2>Front-end developer based in London</h2>
+      <h2>Front-end developer based in West Sussex, England</h2>
       <br /><br />
     </div>
-    <p class="text-center m-5">
-      Welcome to my page, here is an overview of my projects
-    </p>
+
     <div class="container">
       <div class="row">
         <div class="col d-none d-lg-block">
@@ -71,10 +69,9 @@
           <div class="content">
             <h2>FilmFirst App</h2>
             <p class="mb-4">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-              aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-              qui alias veniam excepturi rem dolor fugit dignissimos, sed
-              voluptatum blanditiis harum.
+              This project focused on creating a webpage about something we
+              like. I have a passion for film, which I was able to translate to
+              the web through HTML, CSS and JavaScript.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
@@ -86,10 +83,9 @@
           <div class="content">
             <h2>Weather App</h2>
             <p class="mb-4">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-              aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-              qui alias veniam excepturi rem dolor fugit dignissimos, sed
-              voluptatum blanditiis harum.
+              This was a challenging project using HTML, CSS, JavaScript and
+              API's in order to create a live weather app, providing accurate
+              information on live weather forecasts around the world.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
