--- a/contact.html
+++ b/contact.html
@@ -84,26 +84,30 @@
         </div>
       </div>
       <footer>
-        <a href="mailto:framey27@gmail.com" class="email-link">
-          framey27@gmail.com</a
-        >
-        <div class="social-links d-flex justify-content-center">
-          <a href="http://www.instagram.com/framey22/" target="_blank"
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
-          <a href="http://www.linkedin.com/in/emilyframe86" target="_blank"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-          <a href="https://github.com/framey27" target="_blank"
-            ><i class="fa-brands fa-github"></i
-          ></a>
-        </div>
-        <p class="text-center text-muted mt-4">
-          This project was coded by Emily Frame and it is
-          <a href="https://github.com/framey27/Coding-Portfolio" target="_blank"
-            >open-sourced</a
+        <div class="contact-page">
+          <a href="mailto:framey27@gmail.com" class="email-link">
+            framey27@gmail.com</a
           >
-        </p>
+          <div class="social-links d-flex justify-content-center">
+            <a href="http://www.instagram.com/framey22/" target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="http://www.linkedin.com/in/emilyframe86" target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+            <a href="https://github.com/framey27" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </div>
+          <p class="text-center text-muted mt-4">
+            This project was coded by Emily Frame and it is
+            <a
+              href="https://github.com/framey27/Coding-Portfolio"
+              target="_blank"
+              >open-sourced</a
+            >
+          </p>
+        </div>
       </footer>
     </div>
   </body>
